提交笔记修改

--- a/算法设计与分析/1/几类重要的函数.md
+++ b/算法设计与分析/1/几类重要的函数.md
@@ -49,7 +49,96 @@ $$
 ### 有关性质2的证明
 
 $$
-\lim_{n\rightarrow\infty}\frac{log_bn}{n^a}=
+\lim_{n\rightarrow\infty}\frac{log_bn}{n^a}=\lim_{n\rightarrow\infty}\frac{b^n}{b^{n^a}}=\lim_{n\rightarrow\infty}\frac{1}{b^{n^{a-1}}}=0
 $$
 
- 
+
+$$
+\therefore log_bn=o(n^a)
+$$
+
+### 有关性质3的证明
+
+$$
+\because log_bnlog_ba=log_balog_bn
+$$
+
+$$
+\therefore a^{log_bn}=n^{log_ba}
+$$
+
+## 指数函数与阶乘
+
+### String公式(斯特灵)：
+
+$$
+n!=\sqrt{2\pi n}(\frac{n}{e})^n(1+\Theta(\frac{1}{n}))
+$$
+
+$n!=o(n^n)$
+
+$n!=\omega(2^n)$
+
+$log(n!)=\Theta(nlogn)$
+
+![31403](../../assets/几类重要的函数/31403.png)
+
+
+
+## $\log(n!)=\Theta(n\log n)$的证明
+
+数学基础：分部积分法
+
+![31406](../../assets/几类重要的函数/31406.png)
+$$
+\int \ln xdx=x\ln x-\int xd\ln x
+$$
+
+$$
+=x\ln x-x+C
+$$
+
+下界
+
+![31404](../../assets/几类重要的函数/31404.png)
+$$
+\log(n!)=\sum_ {k=1}^{n}\log k （矩形面积之和）\geq \int_{1}^{n}\log xdx  (积分)
+$$
+
+$$
+=\log e(n\ln n-n+1)=\Omega(n\log n)
+$$
+
+上界：
+
+![31405](../../assets/几类重要的函数/31405.png)
+$$
+\log(n!)=\sum_{k=1}^{n}\log k=\leq \int_{2}^{n+1}\log xdx=O(n\log n)
+$$
+
+## 取整函数
+
+### 取整函数的定义:
+
+$\lceil x\rceil$:表示大于等于x的最小整数
+
+$\lfloor x\rfloor$:表示小于等于x的最大整数
+
+### 应用与实例
+
+![31407](../../assets/几类重要的函数/31407.png)
+
+## 取整函数的性质
+
+1. $x-1<\lfloor x\rfloor \leq x \leq \lceil x\rceil \leq x+1$
+2. $\lfloor x+n \rfloor = \lfloor x\rfloor+n,\lceil x+n \rceil=\lceil x\rceil+n,n\in Z^+$
+3. $\lceil \frac{n}{2}+\frac{n}{2}\rceil=n$
+4. $\lceil \frac{\lceil \frac{n}{a}\rceil}{b}\rceil=\lceil \frac{n}{ab}\rceil,\lfloor \frac{\lfloor \frac{n}{a}\rfloor}{b}\rfloor=\lfloor \frac{n}{ab}\rfloor$
+
+
+
+## 例：按照阶排序
+
+![31408](../../assets/几类重要的函数/31408.png)
+
+![31409](../../assets/几类重要的函数/31409.png)
