提交笔记修改

--- a/算法设计与分析/2/5.消差法化简高阶递推方程.md
+++ b/算法设计与分析/2/5.消差法化简高阶递推方程.md
@@ -1,4 +1,4 @@
-# 消差法化简高阶递推方程
+# 差消法化简高阶递推方程
 
 ## 对于快速排序
 
@@ -48,7 +48,7 @@ $$
 
 利用两个方程相减，将右边的项尽可能消去，以达到降阶的目的
 $$
-T(n)=\frac{2}{n}\sum_{i=1}^{n-1}T(i)+cn\\nT(n)=2\sum_{i=1}^{n-1}{T(i)}+cn^2...1\\(n-1)T(n-1)=2\sum_{i=i}^{n-2}T(i)+c(n-1)^2 ...2（换元）
+T(n)=\frac{2}{n}\sum_{i=1}^{n-1}T(i)+cn\\nT(n)=2\sum_{i=1}^{n-1}{T(i)}+cn^2...1\\(n-1)T(n-1)=2\sum_{i=1}^{n-2}T(i)+c(n-1)^2 ...2（换元）
 $$
 将后面两个等式1、2相减可得：
 $$
